cloudnative/module8/httpingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mying
spec:
  rules:
    - host: www.mytest.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpsvc
                port:
                  number: 80
